# sunshine-super

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.md
cmake/compile_definitions/: common.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake  nlohmann_json.cmake  windows.cmake
cmake/packaging/: windows.cmake  windows_nsis.cmake
cmake/targets/: common.cmake  windows.cmake
shell/: change-version.bat
src/: audio.cpp  audio.h  confighttp.cpp  confighttp.h  display_control.cpp  display_control.h  display_device.cpp  display_device.h  globals.cpp  globals.h  input.cpp  input.h  main.cpp  nvhttp.cpp  rtsp.cpp  rtsp.h  stream.cpp  stream.h  system_tray.cpp  system_tray.h  thread_safe.h  utility.h  video.cpp  video.h  video_capture_session.cpp  video_capture_session.h
src/display_device/: device_topology.h  to_string.cpp  to_string.h  vdd_utils.cpp  vdd_utils.h
src/platform/: common.h
src/platform/windows/: audio.cpp  display_ram.cpp  display_vram.cpp  display_wgc.cpp  mic_write.cpp  publish.cpp
src/platform/windows/display_device/: device_topology.cpp  windows_utils.cpp  windows_utils.h
src_assets/common/assets/web/public/assets/locale/: zh.json
src_assets/windows/misc/gamepad/: install-gamepad.bat
src_assets/windows/misc/service/: install-service.bat
src_assets/windows/misc/vdd/: silent-install.ps1  silent-uninstall.ps1  vdd-install.bat  vdd-modules_install.bat  vdd-uninstall.bat
tools/: CMakeLists.txt
